--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 references:
   images:
-    go: &GOLANG_IMAGE circleci/golang:1.19.4
+    go: &GOLANG_IMAGE cimg/go:1.19.4
 
 # reusable 'executor' object for jobs
 executors:
