try to get the checks to run on PRs (#4)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,16 @@
 name: safeio
 
-on: [workflow_dispatch, push]
-
-env:
-  GO_VERSION: '1.20'
+on:
+  pull_request:
 
 # This workflow runs for not-yet-reviewed external contributions and so it
 # intentionally has no write access and only limited read access to the
 # repository.
 permissions:
   contents: read
+
+env:
+  GO_VERSION: '1.20'
 
 jobs:
   unit-tests:
